--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div class="col-lg-6 col-sm-12">
             <img
               class="title-img"
-              src="images/iphone6.png"
+              src="iphone6.png"
               alt="iphone-mockup"
             />
           </div>
@@ -200,7 +200,7 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="press-logo" src="techcrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="TechCrunch.png" alt="tc-logo" />
       <img class="press-logo" src="tnw.png" alt="tnw-logo" />
       <img
         class="press-logo"
