--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- CSS -->
 
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Google Fonts -->
 
@@ -105,7 +105,7 @@
           <div class="col-lg-6 col-sm-12">
             <img
               class="title-img"
-              src="images/iphone6.png"
+              src="iphone6.png"
               alt="iphone-mockup"
             />
           </div>
@@ -160,7 +160,7 @@
             </h2>
             <img
               class="testimonial-image"
-              src="images/dog-img.jpg"
+              src="dog-img.jpg"
               alt="dog-profile"
             />
             <em>Pebbles, New York</em>
@@ -172,7 +172,7 @@
             </h2>
             <img
               class="testimonial-image"
-              src="images/lady-img.jpg"
+              src="lady-img.jpg"
               alt="lady-profile"
             />
             <em>Beverly, Illinois</em>
@@ -200,14 +200,14 @@
     <!-- Press -->
 
     <section id="press">
-      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
-      <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
+      <img class="press-logo" src="TechCrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="tnw.png" alt="tnw-logo" />
       <img
         class="press-logo"
-        src="images/bizinsider.png"
+        src="bizinsider.png"
         alt="biz-insider-logo"
       />
-      <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-logo" src="mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
